--- a/app/index.html
+++ b/app/index.html
@@ -19,37 +19,29 @@
     <body data-ng-controller="AppController">
 
       <div class="container">
-  
+
         <h2>
-          boilerplate
-          <span class="label label-success">alpha2</span>
+          EotE
         </h2>
 
         <div class="navbar navbar-inverse">
-          <!-- <a class="navbar-brand" href="#">boilerplate</a> -->
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
+            <!--<li><a href="#">Link</a></li>-->
+            <!--<li><a href="#">Link</a></li>-->
           </ul>
         </div>
-        <div class="well">
-            <p>You now have</p>
-            <ul>
-                <li>HTML5 Boilerplate</li>
-                <li>Twitter Bootstrap v3.0rc1</li>
-                <li>RequireJS</li>
-                <li>jQuery 1.9x</li>
-                <li>angularjs-dev</li>
+        <div class="row">
+          <div class="col-md-3">
+            <ul class="nav">
+              <li><a href="#">First</a></li>
             </ul>
-            <p>as well as basic configurations for</p>
-            <ul>
-                <li>Grunt</li>
-                <li>Bower</li>
-                <li>jshint</li>
-            </ul>
-            <p>to get you started.</p>
-            <h3>Enjoy coding!</h3>
+          </div>
+          <div class="col-md-9">
+            <div class="well">
+              <canvas id="eoteCanvas"></canvas>
+            </div>
+          </div>
         </div>
       </div>
 
